added /count endpoint for all registered users
