# docs/swagger.json
@@ -324,6 +324,58 @@
         }
       }
     },
+    "/users/count": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Gets a count of all registered users.",
+        "operationId": "getCountController",
+        "description": "Gets list of water portions",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Request completed with success.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully found all water portions."
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "count": {
+                          "type": "integer",
+                          "example": 33
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
     "/water": {
       "get": {
         "tags": [
